crates/toml_edit/tests/snapshots/invalid/datetime/no-date-time-sep.stderr
TOML parse error at line 1, column 17
  |
1 | foo = 1997-09-0909:09:09
  |                 ^
expected newline, `#`
